apps/sample-nodejs-app/carvel/pkg-v2.0/config/namespace.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ "{}".format(data.values.namespace)
